--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ nav ul li a {
 }
 main {
   width: 100%;
-/*   display: flex; */
+  display: flex;
+  flex-wrap: wrap;
 }
 
 section.left,
 section.right {
   display: flex;
-  flex-wrap: wrap;
   padding: 1rem;
 }
 
