--- a/style.css
+++ b/style.css
@@ -61,3 +61,9 @@ section.right p {
 nav ul li a:hover {
   color: white;
 }
+
+@media screen and (max-width: 625px) {
+  nav ul {
+    flex-direction: column;
+  }
+}
