--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ header {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  background-color: white;
 }
 
 header div.logo {
