--- a/style.css
+++ b/style.css
@@ -180,16 +180,22 @@ main section.second section.cards div.card img {
   border-radius: 50%;
 }
 
-main section.second section.cards div.card h4 {
+main section.second section.cards div.card img:hover {
+  border-radius: 0%;
+  width: 100%;
+  height: 100%;
+}
+
+main section.second section.cards div.card img h4 {
   margin: 1rem 0rem;
   font-size: 2rem;
 }
 
-main section.second section.cards div.card p {
+main section.second section.cards div.card img p {
   font-size: 1.25rem;
 }
 
-main section.second section.cards div.card a {
+main section.second section.cards div.card img a {
   margin: 1rem 0rem;
   text-decoration: none;
   padding: 1rem 1.5rem;
